sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:26: error: not found: value end
    end = false
    ^AlgCocktailSort1:30: error: not found: value end
        end = true
        ^AlgCocktailSort1:33: error: not found: value end
    if (!end) {
         ^AlgCocktailSort1:34: error: return outside method definition
      return
      ^